# swipl-devel

./: .clang-format  .cvsignore  .fileheader  .gitattributes  .gitignore  .gitmodules  .replit  .travis.yml  ANNOUNCE  CMAKE.md  CMakeLists.txt  CODE_SIGNING.md  ChangeLog  Code-of-Conduct.md  INSTALL  INSTALL.md  INSTALL.notes  INSTALL.problems  LICENCE  LICENSE  LSM  Makefile  Makefile.in  PORTING  PRIVACY.md  README  README.BeOS  README.GUI  README.MacOSX  README.RT  README.WIN  README.cygwin  README.debian  README.doc  README.dos  README.git  README.gmp  README.graphics  README.linux  README.md  (+33 more)
cmake/macos_app_fixup/: CMakeLists.txt
man/: .builtin.doc.swp  .cvsignore  .gitignore  CMakeLists.txt  Makefile  Makefile.in  README  README.md  TODO  abstract.doc  abstract.plx  argnames.doc  attvar.doc  attvar.plx  biblio.doc  bit64.doc  bk9.clo  builtin.doc  builtin.plx  calc.c  calc.pl  chr.doc  correct_idx  correct_ind  correctindex  correctindex.in  dialect.doc  dialect.plx  doc.doc  doc2tex  doc2tex.pl  doc_to_tex  engines.doc  engines.plx  extensions.doc  extensions.plx  fancychap.sty  fancyheadings.sty  foreign.doc  foreign.plx  (+64 more)
man/Manual/: 64bits.html  Bibliography.html  Contents.html  DCG.html  DDE.html  DLL.html  DocIndex.html  IDE.html  IO.html  Notes.html  SyntaxAndSemantics.html  acknowledge.html  aggregate.html  allsolutions.html  apply.html  applylist.html  arith.html  assoc.html  attvar.html  autoload.html  block3.html  broadcast.html  builtin.html  builtinlist.html  charconv.html  chario.html  chars.html  chartype.html  check.html  chr.html  chrintro.html  clicense.html  clpbounds.html  clpclp_distinct.html  clpfd.html  clpqr.html  cmdline.html  compare.html  compilation.html  consulting.html  (+142 more)
man/figs/: by-sa.eps  swi.eps  swipl.ps
man/lib/: assoc.doc  assoc.plx  assoclib.md  bounds.doc  broadcast.doc  check.doc  clpb.doc  clpblib.md  clpdistinct.doc  clpfd.doc  clpfdlib.md  clpfdpreds.txt  clpqr.doc  clpqr.plx  clpr.doc  clptuples.doc  debug.doc  gensym.doc  library.doc  library.plx  libsummary.doc  lists.doc  nbset.doc  nbset.plx  netscape.doc  ordsets.doc  pio.doc  predicateoptions.doc  predicateoptions.plx  predopts.txt  prologxref.doc  readutil.doc  record.doc  record.plx  registry.doc  registry.plx  simplex.doc  simplexlib.md  summary.doc  tabling.doc  (+4 more)
man/lib/summaries.d/: clpb.tex  clpfd.tex
man/macosx/: License.html  SWIapp.html  Welcome.html  macosx.doc  macosx.plx
man/txt/: Makefile  README  doc.tfm  i-d.sty  myparms.sty  rfc.sty  rfc.tex  txt.sty  txt.tex
man/txt/dvi2tty/: .cvsignore  Makefile  commands.h  dvi2tty.c  dvi2tty.h  dvistuff.c
src/: .cvsignore  .fileheader  .gitignore  ATOMS  CMakeLists.txt  ChangeLog  CharSet.TODO  INDEX.pl  Makefile  Makefile.in  Makefile.mak  Makefile.win  PROBLEMS  README.RT  README.bin.in  SWI-Prolog.h  SWI-Stream.h  TODO  TODO.57X  TODO.W64  TODO.attvar  TODO.enc  TODO.mp  TODO.shift  TODO.yap  acconfig.h  aclocal.m4  acyclic_v3.c  alloca.c  automake.cmd  boot.sh  chpl.1  chpl.c  common.mk  config.cmd  config.guess  config.h  config.h.cmake  config.h.in  config.sub  (+317 more)
src/Tests/: .fileheader  README
src/Tests/GC/: test_agc_copyterm.pl  test_cgc_1.pl  test_ch_shift.pl  test_clause_gc.pl  test_cleanup_shift.pl  test_gc_1.pl  test_gc_alt_clause.pl  test_tracer_callback.pl
src/Tests/attvar/: diftest.pl  sendmoney.pl  test_attvar.pl  test_dif.pl
src/Tests/charset/: utf8_test.pl
src/Tests/clp/: linprog.pl
src/Tests/compile/: test_autoload.pl
src/Tests/core/: test_IEEE754.pl  test_acyclic.pl  test_answer.pl  test_arith.pl  test_attvar.pl  test_bags.pl  test_bips.pl  test_body_index.pl  test_call.pl  test_call_residue_vars.pl  test_cgc.pl  test_code_type.pl  test_continuation.pl  test_copy_term.pl  test_coroutining.pl  test_d_break.pl  test_db.pl  test_dbref.pl  test_dcg.pl  test_debug.pl  test_det_decl.pl  test_dict.pl  test_env.pl  (+55 more)
src/Unicode/: .gitignore  BidiMirroring.txt  EastAsianWidth.txt  README  README.md  derived_core_properties.pl  prolog_syntax_map.pl
src/ac/: ax_c_float_words_bigendian.m4
src/compat/: YapInterface.h  sicstus.h  yap.c
src/config/: win32.h  win64.h  wincfg.h  windows.h
src/libbf/: REAME.md  bf_gmp.c  bf_gmp.h  bf_gmp_types.h  bf_test.pl  cutils.c  cutils.h  libbf.c  libbf.h  mersenne-twister.c  mersenne-twister.cpp  mersenne-twister.h
src/libtai/: BLURB  CHANGES  FILES  INSTALL  Makefile.in  Makefile.mak  README  TODO  VERSION  caldate.3  caldate.h  caldate_fmjd.c  caldate_fmt.c  caldate_mjd.3  caldate_mjd.c  caldate_norm.c  caldate_scan.c  caldate_ster.c  caltime.3  caltime.h  caltime_fmt.c  caltime_scan.c  caltime_tai.3  caltime_tai.c  caltime_utc.c  check.c  check.in  check.out  easter.c  leapsecs.3  leapsecs.c  leapsecs.h  leapsecs.txt  leapsecs_add.c  leapsecs_init.c  leapsecs_read.c  leapsecs_sub.c  nowutc.c  tai.3  tai.h  (+23 more)
src/minizip/: Makefile.in  crypt.h  ioapi.c  ioapi.h  iowin32.c  miniunz.c  minizip.c  unzip.c  unzip.h  zip.c  zip.h
src/os/: README  SWI-Stream.h  atoms.sh  dtoa.c  pl-apple.c  pl-apple.h  pl-beos.c  pl-buffer.c  pl-buffer.h  pl-codelist.c  pl-cstack.c  pl-cstack.h  pl-ctype.c  pl-ctype.h  pl-dtoa.c  pl-dtoa.h  pl-error.h  pl-file.c  pl-file.h  pl-files.c  pl-files.h  pl-fmt.c  pl-fmt.h  pl-glob.c  pl-locale.c  pl-locale.h  pl-mswchar.h  pl-option.c  pl-option.h  pl-os.c  pl-os.h  pl-prologflag.c  pl-prologflag.h  pl-rl.c  pl-stream.c  pl-stream.h  pl-string.c  pl-string.h  pl-table.c  pl-table.h  (+6 more)
src/rc/: .cvsignore  Makefile  Makefile.in  Makefile.mak  access.c  build.c  html.c  html.h  rc.c  rc.doc  rc.h  rcutil.h  util.c
src/test/: dmalloc.c  dmalloc.pl  gdbinit  lwrcase.c  m-model.lnk  memmodel.c  mk  mmap.c  nop.c  recmutex.c  sgimmap.c  test_loop.pl
src/tools/: README  analysis.pl  calltree.pl  functions.pm  recursive.pl  safe.pl  sexp.pl  shift.pl  update-deps
src/wasm/: .gitignore  README.md  bench.html  bind.html  boot_pre.js  cbg.html  chat80.html  engines.html  exports.json  index.html  pl-wasm.c  pre.js  prolog.js  runtime_exports.json  server.pl  shell.html  test.html  test.pl
src/win32/: embed_manifests.cmd
(+1388 files in other folders)
